style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;
}

ul, li {
  list-style-type: none;
}


/* =============================================
=            GLOBAL SETTINGS            =
============================================= */

.black-font-big {
  font-size: 1.25rem;
  font-weight: bold;
  color: black;
  line-height: 10px;
}

.black-font-medium {
  font-size: 0.81rem;
  font-weight: bold;
  color: black;
  line-height: 20px;
}

.story-h1 {
  font-size: 1rem;
  color: #9a9a9a;
  font-weight: 600;
}

.small-font {
  font-size: 0.8rem;
}

.medium-font {
  font-size: 1.6rem;
}

.primary-font {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
}

.text-font {
  font-family: "Archivo", sans-serif;
}

/* =====  End of GLOBAL SETTINGS  ====== */

/* =============================================
                    HEADER
    ============================================= */

.header-logo {
  width: 132px;
  height: 20px;
}

.bg-red-news {
  background: #f72210;
}

.btn-warning {
  font-size: 13px;
  background-color: #ffe400;
  font-weight: bold;
  padding: 2px 3px;
  border: none;
  border-radius: 12px;
  margin: 0 7px;
  line-height: 16px;
}

.fa-user,
.fa-bars {
  color: #fdc8c3;
}

/* =============================================
=            FEATURE STORIES            =
============================================= */

.art-story a {
  font-size: 1.2rem;
  color: black;
  line-height: 1.5rem;
}

.art-story p {
  font-size: 0.81rem;
  line-height: 1.125rem;
}

/* =====  End of FEATURE STORIES  ====== */

/* =============================================
=            THE DEBATE            =
============================================= */

.border-top-gross {
  border-top: 4px solid #d9d9d9;
}

.border-bottom-gross {
  border-bottom: 4px solid #d9d9d9;
}

.border-top-double {
  border-top: 3px double #d9d9d9;
}

.border-top-double::before {
  content: "vs";
  font-size: 1.2rem;
  font-weight: bold;
  background-color: black;
  color: #d6d6d6;
  border-radius: 50%;
  position: relative;
  display: block;
  bottom: 2.2rem;
  left: 50%;
  padding: 0.1rem 0.3rem;
}

/* =====  End of THE DEBATE  ====== */

/* =============================================
=            SPONSORS            =
============================================= */

.text-form-size {
  font-size: 1.187rem;
}

/* =====  End of SPONSORS  ====== */

/* =============================================
=            MORE STORIES SECTION            =
============================================= */

.font-title-more-stories {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
  font-size: 1.05rem;
  color: black;
  font-weight: 700;
}

.font-p-more-stories {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 0.81rem;
  color: black;
}

/* =====  End of MORE STORIES SECTION  ====== */

/* =============================================
=            Section comment block            =
============================================= */

.font-p-my-turn {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
  font-size: 1rem;
  color: #818181;
}

/* =====  End of Section comment block  ====== */

/* =============================================
=            IN THE MAGAZINE            =
============================================= */

.after-cover-text {
  color: #f72210;
  font-weight: bold;
}

/* =====  End of IN THE MAGAZINE  ====== */

/* =============================================
=            EDITOR'S PICK            =
============================================= */

.editor-pick-text {
  font-size: 0.81rem;
  line-height: 18px;
  color: #555;
}

/* =====  End of EDITOR'S PICK  ====== */

/* =============================================
=            U.S.            =
============================================= */

.black-font-news {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1rem;
  color: black;
}

/* =====  End of U.s.  ====== */

.font-text-us {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.2rem;
  color: black;
  font-family: "roboto condensed", Arial, Helvetica, sans-serif;
}

/* =============================================
=           SUBSCRIBE            =
============================================= */


.img-sub-1 {
  top: 8%;
  left: 13%;
}

.img-sub-2 {
  top: 70%;
  left: 30%;
}


/* =====  End of Section comment block  ====== */


/* =============================================
=            Section NEWSLETTER            =
============================================= */


/* =====  End of Section NEWSLETTER  ====== */


/*=============================================
=            FOOTER            =
=============================================*/

.subs-btn {
  font-size: 1.2rem;
}

.subs-btn-2 {
  font-size: 1.2rem;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 30px;
}

.login-nav, .offer-nav {
  display: none;
}

/*=====  End of FOOTER  ======*/

.smaller-none {
  display: none;
}
/* =============================================
=            Media query min-width = 768px            =
============================================= */

@media (min-width: 768px) {

  .login-nav, .offer-nav {
    display: initial;
  }

  .user-nav {
    display: none;
    visibility: hidden;
  }

  .first-sponsor, .second-sponsor {
    display: none;
  }

  .medium-none {
    display: none;
  }

  .medium-show {
    display: initial;
  }

}
/* =====  End of Media query min-width = 768px  ====== */

